--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
 @font-face {
 	font-family: 'MyFont';
-	src: url('./assets/CutiveMono-Regular.ttf') format('ttf');
+	src: url('./assets/CutiveMono-Regular.ttf') format('opentype');
 	font-weight: 600;
 	font-style: normal;
 }
 
 .hello {
-	color: yellow;
+	color: yellowgreen;
 	font-family: 'MyFont';
 	background: url('./assets/icon.png');
 }
